--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=backend
+
+spring.datasource.url=${JDBCUrl}
+spring.datasource.username=${JDBCUsername}
+spring.datasource.password=${JDBCPassword}
+
+spring.jpa.hibernate.ddl-auto=create-drop
