--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=${JDBCUrl}
 spring.datasource.username=${JDBCUsername}
 spring.datasource.password=${JDBCPassword}
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
