--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,9 +29,9 @@ jobs:
         cache: maven
 
     - name: Set environment variables
-      run: echo "JDBCUrl=${{ secrets.JDBC_URL }}" 
-           echo "JDBCUsername=${{ secrets.JDBC_USERNAME }}" 
-           echo "JDBCPassword=${{ secrets.JDBC_PASSWORD }}" 
+      run: echo "JDBCUrl=${{ secrets.JDBCUrl }}" 
+           echo "JDBCUsername=${{ secrets.JDBCUsername }}" 
+           echo "JDBCPassword=${{ secrets.JDBCPassword }}" 
 
     
     - name: Build with Maven
