--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=backend
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cinema
-spring.datasource.username=niko
-spring.datasource.password=n
+
+spring.datasource.url=${JDBCUrl}
+spring.datasource.username=${JDBCUsername}
+spring.datasource.password=${JDBCPassword}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
